# data-science-pca

./: .gitignore  README.md  pyproject.toml
data_science_pca/: example.ipynb  examples.ipynb  pca.py
tests/: test_pca.py
