[tool.poetry]
name = "data-science-pca"
version = "0.1.0"
description = ""
authors = ["Rebekka Haley <rebekka.haley@gmail.com>"]
readme = "README.md"
packages = [{include = "data_science_pca"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.3"
scipy = "^1.9.1"
pylint = "^2.15.2"
pytest = "^7.1.3"
pandas = "^1.4.4"
matplotlib = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
